--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.68"
 askama = "0.11.1"
 askama_warp = "0.12.0"
+base64 = "0.21.0"
 chrono = "0.4.23"
 datetime = "0.5.2"
 feed-rs = "1.2.0"
