--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,7 @@ jobs:
       image: kdwils/feedreader
       registry: ghcr.io
       environment: Homelab
+      platforms: linux/amd64,linux/arm64
   update-image-tag:
     needs: build-push-sign
     uses: kdwils/homelab-workflow/.github/workflows/update-image-tag.yml@main
