--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,8 @@ name: Build Push Sign
 on:
   push:
     branches: ["main"]
+  pull_request:
+    branches: ["*"]
 jobs:
   build-push-sign:
     uses: kdwils/homelab-workflow/.github/workflows/build-push-sign.yml@main
